background image was not showing, trien to fix it

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url(./images/wallpapersden.com_starry-night-landscape_1920x1080.jpg);
+    background: url(../images/wallpapersden.com_starry-night-landscape_1920x1080.jpg);
     color: #fff;
 }
 
